--- a/_posts/2019-07-08-the-us-narrative-today.html
+++ b/_posts/2019-07-08-the-us-narrative-today.html
@@ -2208,107 +2208,107 @@ stories:
   domain: http://www.murrayledger.com/
   link: https://www.murrayledger.com/welch-family-in-california/image_6753c47a-a10b-11e9-a998-6fde07c1a3df.html
 images:
-- name: gypsymosaic-gypsy-eyes-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-post-modern.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-internet-numbers.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-internet-numbers.JPG
-- name: sand-hand-sand-hand-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-post-modern.jpg
-- name: yosemite-yosemite-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-yellow-collage.jpg
-- name: stories-36349148770-1a9d2692b2-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36349148770-1a9d2692b2-z.jpg
-- name: rain-princess-IMG_8318.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8318.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-colorful-dream.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-colorful-dream.JPG
-- name: mediterranean-mediterranean-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-sand-paper.jpg
-- name: mediterranean-mediterranean-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-yellow-paper.jpg
-- name: sand-hand-sand-hand-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crabapple.jpg
-- name: oldcabin-store-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-umberto-bocc.jpg
-- name: beach-clouds-lifeguard-beachclouds-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-nazi-poster.jpg
-- name: dc-statue-dcstatue-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-plentiful.jpg
-- name: dragon-desert-desert-dragon-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-rainbow-festival.jpg
-- name: downtheline-downtheline-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dark-rain.jpg
-- name: oldhousecars-house-old-cars-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-smoking-cigarette.jpg
-- name: oldhotel-oldhotel-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-umberto-bocc.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
-- name: capital-battle-capitolbattle-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-aqua.jpg
-- name: birdhouse-birdhouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-electricity.jpg
-- name: legal-statue-legalstatue-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-rainbow-festival.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-3.jpg
-- name: oldbarn-oldbarn-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-graham-sutherland.jpg
-- name: docks-docks-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-atari-asteroids.jpg
-- name: 35562068104_fa20c57575-nazi-invasion.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-nazi-invasion.jpg
-- name: sand-hand-sand-hand-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-sunday.jpg
-- name: bordercrossing-bordercrossing-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-clean-view.jpg
-- name: trucksilo-trucksilo-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-monet-one.jpg
-- name: paris-paris-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-really-hot.jpg
-- name: rockingchair-rockingchair-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-yellow-paper.jpg
-- name: downtown-los-angeles-downtown-la-gred-mash.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-gred-mash.JPG
-- name: crow-crow-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dry-skin.jpg
-- name: stories-death-valley-national-park-dali-three-just-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-death-valley-national-park-dali-three-just-road.jpg
-- name: oldroad-old-road-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-alberto-giacometti.jpg
-- name: gypsy-wagon-gypsywagon-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-diego-rivera1.jpg
-- name: copper-circuit-IMG_7831.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7831.jpg
-- name: containership-containership-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-free-woman.jpg
-- name: sand-hand-sand-hand-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-jap-wav-pr.jpg
-- name: powerlines-power-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-wols.jpg
-- name: oldroad-old-road-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-gan-vogh.jpg
-- name: border-fence-border-fence-on-hill-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-internet-numbers.jpg
-- name: old-gas-pumps-oldgaspumps-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-deep-connections.jpg
-- name: 35201856153_61bc075e4b-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-copper-circuit.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-alberto-giacometti.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-alberto-giacometti.JPG
-- name: subway-subway-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-constitution.jpg
-- name: berlinwall-DSC-0084-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-plentiful.jpg
-- name: gears-4882162452-fa3126b38d-b-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-oily-mcoilface.jpg
-- name: old-gas-pumps-oldgaspumps-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colored-circuits.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-crabapple.jpg
-- name: berlinwall-DSC-0084-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-nazi-poster.jpg
-- name: white-house-lawn-white-house-window-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-propaganda-leaflets.jpg
+- name: walled-garden-walled-garden-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-constitution.jpg
+- name: gears-4882162452-fa3126b38d-b-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-rainbow-festival.jpg
+- name: rockingchair-rockingchair-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-alberto-giacometti.jpg
+- name: downtown-old-empty-retail-leaflets-of-the-russian-revolution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-old-empty-retail-leaflets-of-the-russian-revolution.jpg
+- name: old-school-house-old-schoolhouse-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-yellow-collage.jpg
+- name: catacombs-catacombs-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-china-prop.jpg
+- name: bordercrossing-bordercrossing-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-purple-storm.jpg
+- name: adam-smith-adam-smith-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-space-pizza.jpg
+- name: old-barn-old-barn-1500-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-constitution.jpg
+- name: oldroad-old-road-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-satan-red.jpg
+- name: oldtrain-oldtrain-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-light-dali.jpg
+- name: stories-castle-walls-cannon-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-walls-cannon-satan-red.jpg
+- name: christianity-christianity-under-construction-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-mucha-mult.jpg
+- name: old-door-lock-old-door-lock-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dark-rain.jpg
+- name: abandonedbuildings_deep_connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_deep_connections.jpg
+- name: power-lines-power-lines-empty-space-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-space-pizza.jpg
+- name: lincoln-memorial-lincolnmemorial-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-far-away.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-diego-rivera1.jpg
+- name: razorwire-DSC-0080-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-post-modern.jpg
+- name: gears-4882162452-fa3126b38d-b-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-nazi-poster.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-granite.jpg
+- name: nyc-flag-nycflag-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-space-pizza.jpg
+- name: flower-barbed-wire-flower-barbed-wire-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-alien-goggles.jpg
+- name: san-francisco-street-view-san-francisco-street-view-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-gred-mash.jpg
+- name: oldhouse-granaryfield-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-smooth-ride.jpg
+- name: two-sattelite-dishes-uncle-sam.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/two-sattelite-dishes-uncle-sam.jpg
+- name: cannon-facing-cannon-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-blue-circuit.jpg
+- name: downtheline-downtheline-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-creativity.jpg
+- name: ellis-island-ellisisland-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-constitution.jpg
+- name: capital-battle-capitolbattle-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-matrix.jpg
+- name: oldtrain-oldtrain-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-graham-sutherland.jpg
+- name: crow-crow-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-crunch-paper.jpg
+- name: old-door-lock-old-door-lock-2-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-4.jpg
+- name: containership-containership-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-smooth-ride.jpg
+- name: mistywoods-babyfoot-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-umberto-bocc.jpg
+- name: yosemite-yosemite-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-sunday.jpg
+- name: oldhotel-oldhotel-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crabapple.jpg
+- name: abandonedbuildings_dry_skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dry_skin.jpg
+- name: store-on-corner-oldcabin-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-rainbow-festival.jpg
+- name: border-crossing-bordercrossing-spagetti-accident.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-spagetti-accident.png
+- name: status-berlin-status-berlin-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-deep-connections.jpg
+- name: fence-fence-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-granite.jpg
+- name: oldbarn-oldbarn-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-ww2-color.jpg
+- name: abe-lincoln-one-post-modern-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-07-91.jpg
+- name: flower-barbed-wire-flower-barbed-wire-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-matrix.jpg
+- name: downtheline-downtheline-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purple-pond.jpg
+- name: razorcliff-razorcliff-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purp-paper.jpg
+- name: lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
+- name: trucksilo-trucksilo-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-soul.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-alien-goggles.jpg
 ---
 'Independence Day' And 'Dazed And Confused'.&nbsp;Miami River Commission Asks City To Sink Development Plan.&nbsp;Federal Drug And Weapons Bust.&nbsp;Check Out Gods Gardens This Month.&nbsp;Volunteer Brings History Back To Life At Monocacy National Battlefield.&nbsp;Zendaya Leads Tributes To Cameron Boyce After Disney Channel Star's Death.&nbsp;First Homes Rebuilt In Camp Fire Areas Are Nearing Completion.&nbsp;Publics Help Needed In Finding Missing People.&nbsp;
